# CyanScript

./: .env  .gitignore  LICENSE  Markdown文本输出规范.md  README.md  cyan_script.py  docs_sample.md  pyproject.toml  requirements.txt
scripts/: fix_cover_title_placeholder.py  fix_header_placeholders.py  fix_main_content_placeholder.py  template_selfcheck.py
